[project]
name = "uv-ecosystem-testing"
version = "0.1.0"
description = "Testing uv on a larger number of ecosystem projects"
readme = "Readme.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "orjson>=3.11.3,<4.0.0",
    "tomli-w>=1.2.0,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.1,<0.14.0",
]
